--- a/AllLife_Bank_Personal_Loan_Campign_Modelling.ipynb
+++ b/AllLife_Bank_Personal_Loan_Campign_Modelling.ipynb
@@ -16,7 +16,11 @@
         "id": "GQ4inoGOw_su"
       },
       "source": [
-        "# Machine Learning: AllLife Bank Personal Loan Campaign"
+        "<span style=\"font-family: Helvetica; font-weight:bold;font-size:2.5em;color:navy\">Machine Learning: AllLife Bank Personal Loan Campaign</span>\n",
+        "\n",
+        "<span style=\"font-family: Helvetica; font-weight:bold;font-size:1.5em;color:green\">Muthuraman Muthusubramanian</span>\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -90,12 +94,12 @@
       "cell_type": "code",
       "source": [
         "# Installing the libraries with the specified version.\n",
-        "!pip install numpy==1.25.2 pandas==1.5.3 matplotlib==3.7.1 seaborn==0.13.1 scikit-learn==1.2.2 sklearn-pandas==2.2.0 -q --user"
+        "!pip install numpy pandas matplotlib seaborn scikit-learn sklearn-pandas -q --user"
       ],
       "metadata": {
         "id": "ryFwv2fwXqBw"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
